Many mobile app improvements
